--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
                 <h1 class="title">Where were you on September 11, 2001?</h1>
                 <h1 class="under">Click on the numbers to get the corresponding question</h1>
                 <div class="buttons">
-                    <button type="button" class="button" id="1">
+                    <button type="button" class="button" id="1" onclick="click1();">
                         1
                     </button>
-                    <button type="button" class="button" id="2">
+                    <button type="button" class="button" id="2" onclick="click2();">
                         2
                     </button>
-                    <button type="button" class="button" id="3">
+                    <button type="button" class="button" id="3" onclick="click3();">
                         3
                     </button>
-                    <button type="button" class="button" id="4">
+                    <button type="button" class="button" id="4" onclick="click4();">
                         4
                     </button>
-                    <button type="button" class="button" id="5">
+                    <button type="button" class="button" id="5" onclick="click5();">
                         5
                     </button>
-                    <button type="button" class="button" id="6">
+                    <button type="button" class="button" id="6" onclick="click6();">
                         6
                     </button>
-                    <button type="button" class="button" id="7">
+                    <button type="button" class="button" id="7" onclick="click7();">
                         7
                     </button>
-                    <button type="button" class="button" id="8">
+                    <button type="button" class="button" id="8" onclick="click8();">
                         8
                     </button>
-                    <button type="button" class="button" id="9">
+                    <button type="button" class="button" id="9" onclick="click9();">
                         9
                     </button>
                 </div>
@@ -46,10 +46,10 @@
             <div class="bottom">
                 <div class="text">
                     <div class="question">
-                        <h1 class="text question">Question: ajksdfj;alskdjf;aklsdjf</h1>
+                        <h1 class="text" id="quest_text">I am Aaron Taylor and I have interviewed my mom for the "Where were you on September 11, 2001?" project.</h1>
                     </div>
                     <div class="answer">
-                        <h1 class="text answer">Answer: aksjdf;alsdkfjasfdl</h1>
+                        <h1 class="text" id="ans_text">This project is for Mr. Drakeley's US History 9 Honors class.</h1>
                     </div>
                 </div>
             </div>
