added source code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="top">
                 <h1 class="title">Where were you on September 11, 2001?</h1>
                 <h1 class="under">Click on the numbers to get the corresponding question</h1>
+                <a href="https://github.com/act1313/911project">Source Code</a>
                 <div class="buttons">
                     <button type="button" class="button" id="1" onclick="click1();">
                         1
